--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
     - cron: '0 12 * * *'
 
 jobs:
-  build:
+  build01:
     name: Run Node.js
     runs-on: ubuntu-latest
     steps:
@@ -17,7 +17,20 @@ jobs:
     - name: Use Node.js 21
       uses: actions/setup-node@v4.0.0
       with:
-        node-version: 21
+        node-version: 22
         cache: 'npm'    
     - run: npm install      
-    - run: npm start
+    - run: npm start01
+  
+  build02:
+    name: Run Node.js
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4.1.1    
+    - name: Use Node.js 21
+      uses: actions/setup-node@v4.0.0
+      with:
+        node-version: 22
+        cache: 'npm'    
+    - run: npm install      
+    - run: npm start02
